# teachbaseai

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  MEMORY_DISK_REPORT.md  ONBOARDING_EXTERNAL_AGENT.txt  README.md  SERVER_ACCESS.md  _necrogame-host.b64  _necrogame-host.conf  _plink_cmds.sql.ps1  _plink_cmds_admin_auth_status.sh  _plink_cmds_admin_auth_status_full.sh  _plink_cmds_admin_bot_check_dump.sh  _plink_cmds_admin_bot_check_len.sh  _plink_cmds_admin_bot_check_one.sh  _plink_cmds_admin_bot_fix_dump.sh  _plink_cmds_admin_bot_ping_dump.sh  _plink_cmds_admin_calls.sh  _plink_cmds_admin_calls_backend.sh  _plink_cmds_admin_check_unauth.sh  _plink_cmds_admin_diag.sh  _plink_cmds_admin_diag_2_7.sh  _plink_cmds_admin_provision.sh  _plink_cmds_admin_refresh_backend.sh  _plink_cmds_admin_refresh_backend_post.sh  _plink_cmds_admin_refresh_check.sh  _plink_cmds_admin_refresh_len.sh  _plink_cmds_admin_refresh_masked.sh  _plink_cmds_allowlist_count.sh  _plink_cmds_allowlist_desc.sh  _plink_cmds_allowlist_rows.sh  _plink_cmds_backend_tail.sh  _plink_cmds_bitrix_http_logs_desc.sh  _plink_cmds_bitrix_http_logs_portal2.sh  _plink_cmds_bitrix_http_logs_trace.sh  _plink_cmds_bitrix_logs_recent.sh  _plink_cmds_bitrix_logs_recent2.sh  _plink_cmds_check_backend.sh  (+259 more)
.githooks/: pre-commit
.venv312/: pyvenv.cfg
alembic/: env.py
docs/: AGENTS_ONBOARDING.md  ARCHITECTURE.md  BITRIX_DOCS_INDEX.md  BITRIX_INSTALL.md  DIAGNOSTIC_REPORT_2026-02-02.md  DIAGNOSTIC_REPORT_2026-02-02_PARTS_A-G.md  DIAGNOSTIC_REPORT_AUTH_2026-02-03.md  DIAGNOSTIC_REPORT_INBOUND_EVENTS_UI.md  (+26 more)
(+457 files in other folders)
