[project]
name = "teachbaseai"
version = "0.1.0"
description = "Bitrix24 Marketplace multi-portal chat app"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.2",
    "starlette==0.37.2",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.4",
    "rq==1.16.2",
    "pydantic==2.7.4",
    "pydantic-core==2.18.4",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.26.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "pytest-timeout==2.3.1",
    "httpx==0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["apps/backend"]
timeout = 30
